Add some tig keybinding resets.
Because the default ones are silly.

--- a/tig/.tigrc
+++ b/tig/.tigrc
@@ -1,2 +1,4 @@
+source ~/.config/tig/keybindings-reset.tigrc
+source ~/.config/tig/keybindings.tigrc
 source ~/.config/tig/colorscheme.tigrc
 source ~/.config/tig/settings.tigrc
