Add git ignore alias.
This ignores files with a different method than via .gitignore: rather
than un-tracking a file, a file can be initialized, commited, and then
have all of its future changes ignored.

This is useful for files which need to exist, but which contain
sensitive information.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -29,3 +29,7 @@
 	rem = rebase master
 	rpo = remote prune origin
 	up = !git fetch && git checkout master && git pull && git checkout -
+
+	ignore = update-index --assume-unchanged
+	unignore = update-index --no-assume-unchanged
+	ignored = !git ls-files -v | grep "^[[:lower:]]"
