--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -33,3 +33,5 @@
 	ignore = update-index --assume-unchanged
 	unignore = update-index --no-assume-unchanged
 	ignored = !git ls-files -v | grep "^[[:lower:]]"
+
+	delete-merged = !git branch --merged | grep -v "^*" | xargs -n 1 git branch -d
