Add an important show.

--- a/flexget/tv-series.yml
+++ b/flexget/tv-series.yml
@@ -4,6 +4,7 @@ series:
     - Adventure Time
     - American Horror Story
     - Brody Stevens Enjoy It
+    - Cosmos
     - Drunk History
     - Game of Thrones:
         quality: 720p
