Checking out Silicon Valley.
Based on @mrossimojo's description. :+1::+1:

--- a/flexget/tv-series.yml
+++ b/flexget/tv-series.yml
@@ -10,6 +10,7 @@ series:
         quality: 720p
     - Louie
     - Mad Men
+    - Silicon Valley
     - South Park
     - The Colbert Report
     - The Daily Show
