--- a/tig/.tigrc
+++ b/tig/.tigrc
@@ -1,4 +1,4 @@
-source ~/.config/tig/keybindings-reset.tigrc
+# source ~/.config/tig/keybindings-reset.tigrc
 source ~/.config/tig/keybindings.tigrc
 source ~/.config/tig/colorscheme.tigrc
 source ~/.config/tig/settings.tigrc
