Update some UX settings.

--- a/tig/.tigrc
+++ b/tig/.tigrc
@@ -95,9 +95,9 @@ set show-notes			= yes		# When non-bool passed as `--show-notes=...` (diff)
 #set blame-options		= -C -C -C	# User-defined options for `tig blame` (blame)
 
 # Misc
-set refresh-mode		= auto		# Enum: manual, auto, after-command, periodic
-set refresh-interval		= 10		# Interval in seconds between refreshes
-set ignore-case			= no		# Ignore case when searching?
+set refresh-mode		= periodic	# Enum: manual, auto, after-command, periodic
+set refresh-interval		= 2		# Interval in seconds between refreshes
+set ignore-case			= yes		# Ignore case when searching?
 set focus-child			= yes		# Move focus to child view when opened?
 set horizontal-scroll		= 50%		# Number of columns to scroll as % of width
 set split-view-height		= 67%		# Number of lines for bottom view as % of height
@@ -105,8 +105,8 @@ set vertical-split		= auto		# Enum: horizontal, vertical, auto; Use auto to
 						# switch to horizontal split when width allows it
 set editor-line-number		= yes		# Automatically pass line number to editor? Used
 						# for opening file at specific line e.g. from a diff
-set mouse			= no		# Enable mouse support?
-set mouse-scroll		= 3		# Number of lines to scroll via the mouse
+set mouse			= yes		# Enable mouse support?
+set mouse-scroll		= 2		# Number of lines to scroll via the mouse
 
 # User-defined commands
 # ---------------------
