Check out Fargo.
Per @wkf

--- a/flexget/tv-series.yml
+++ b/flexget/tv-series.yml
@@ -8,6 +8,7 @@ series:
     - Drunk History
     - Game of Thrones:
         quality: 720p
+    - Fargo
     - Louie
     - Mad Men
     - Silicon Valley
