--- a/tig/.tigrc
+++ b/tig/.tigrc
@@ -153,8 +153,8 @@ bind stash	!	?@git stash drop %(stash)
 bind refs	!	?git branch -D %(branch)
 
 bind refs	c	:!git checkout %(branch)
-bind main	c	:!?git checkout %(commit)
-bind diff	c	:!?git checkout %(commit)
+bind main	c	!?git checkout %(commit)
+bind diff	c	!?git checkout %(commit)
 
 bind main	P	:!git cherry-pick -e %(commit)
 bind diff	P	:!git cherry-pick -e %(commit)
