--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ Package Control.system-ca-bundle
 
 configstore/
 
-flexget/private/imdb-settings.yml
+flexget/private.yml
 flexget/db-config.sqlite
 flexget/flexget.log
 flexget/received/
