Upgrade TV Shows as better quality rips come out.

--- a/flexget/config.yml
+++ b/flexget/config.yml
@@ -8,6 +8,12 @@ tasks:
       settings:
         set:
           path: "/Users/mark/TV Shows/{{series_name}}/Season {{series_season}}/"
+        upgrade: yes
+        qualities:
+          - webrip
+          - hdtv
+          - hdtv 720p
+          - dvdrip 720p
       from:
         trakt_list:
           username: '{{ secrets.trakt.username }}'
