Use Trakt for movie watchlist.
IMDB's API is inconsistent and buggy.

--- a/flexget/config.yml
+++ b/flexget/config.yml
@@ -31,9 +31,11 @@ tasks:
     priority: 2
     accept_all: yes
     queue_movies: yes
-    imdb_list:
-      user_id: '{{ secrets.imdb.user_id }}'
-      list: watchlist
+    trakt_list:
+      username: '{{ secrets.trakt.username }}'
+      password: '{{ secrets.trakt.password }}'
+      api_key: '{{ secrets.trakt.api_key }}'
+      movies: watchlist
 
 
   download-movie-queue:
