Open new panes in current pane's path.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,5 +16,5 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # | and - to split window
-bind \ split-window -h
-bind - split-window -v
+bind \ split-window -hc "#{pane_current_path}"
+bind - split-window -vc "#{pane_current_path}"
