--- a/flexget/config.yml
+++ b/flexget/config.yml
@@ -9,11 +9,7 @@ tasks:
         set:
           path: "/Users/mark/TV Shows/{{series_name}}/Season {{series_season}}/"
         upgrade: yes
-        qualities:
-          - webrip
-          - hdtv
-          - hdtv 720p
-          - dvdrip 720p
+        quality: webrip+ <=720p
       from:
         inputs:
           - trakt_list:
