--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,8 @@ set-window-option -g utf8 on
 
 set -g default-terminal "screen-256color"
 
+set-option -g default-command "reattach-to-user-namespace -l fish"
+
 # Make C-t the prefix
 unbind C-b
 set -g prefix C-t
