Select color scheme, don't open new tab with it.

--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -791,6 +791,27 @@
 			<key>Text</key>
 			<string></string>
 		</dict>
+		<key>0x31-0x140000</key>
+		<dict>
+			<key>Action</key>
+			<integer>37</integer>
+			<key>Text</key>
+			<string>53E1D9FC-311A-40E4-8594-E545D2AB676E</string>
+		</dict>
+		<key>0x32-0x140000</key>
+		<dict>
+			<key>Action</key>
+			<integer>37</integer>
+			<key>Text</key>
+			<string>791189C9-6E96-4921-A6CB-700CBF78B621</string>
+		</dict>
+		<key>0x33-0x140000</key>
+		<dict>
+			<key>Action</key>
+			<integer>37</integer>
+			<key>Text</key>
+			<string>862BB286-0B05-4507-B7F2-A4461A95A2B9</string>
+		</dict>
 		<key>0x9-0x40000</key>
 		<dict>
 			<key>Action</key>
